--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,29 @@
-style  
+.
+
+
+
+
+
+
+
+
+
+.
+
+
+
+
+
+
+
+
+
+fbimg {
+  height: 50px;
+  width: 50px
+}
+
+.twitterimg {
+  height: 50px;
+  width: 50px
+}
