--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,17 @@
-style  
+style
+
+body {
+    background-color: lightblue;
+}
+
+h1 {
+  color: red;
+  size : 50px;
+}
+
+img {
+width: 1000px;
+ height: 300px;
+ max-width: 100%;
+   height: 100%;
+}
